module(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")

bazel_dep(name = "rules_python", version = "1.6.1")

python312 = use_extension("@rules_python//python/extensions:python.bzl", "python")
python312.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)

use_repo(python312, python = "python_3_12")

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boringssl", version = "0.20250818.0")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "xz", version = "5.4.5.bcr.5")
bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
bazel_dep(name = "zstd", version = "1.5.7")

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)
